--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="text-center mt-3">
             <h1>Satria Dishan</h1>
 
-            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, dolorum.</h6>
+            <h6>Matholic americanoholic n muscatholic</h6>
         </div>
 <dic class="row px-5 gap-3 mt-4">
     <a href="https://www.tiktok.com/@satria_dshn?_t=ZS-90BszIgpIyl&_r=1">TikTok</a>
